[gd_scene load_steps=3 format=3 uid="uid://cb63f37xwynge"]

[ext_resource type="Script" path="res://addons/admob/src/core/components/General.gd" id="1"]
[ext_resource type="Script" path="res://addons/admob/src/core/components/Enabled.gd" id="2"]

[node name="General" type="VBoxContainer"]
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = 4.0
offset_top = 32.0
offset_right = -4.0
offset_bottom = -4.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1")

[node name="Enabled" type="CheckBox" parent="."]
offset_right = 1144.0
offset_bottom = 31.0
text = "Enabled"
script = ExtResource("2")

[node name="ConfirmationDialog" type="ConfirmationDialog" parent="Enabled"]
dialog_text = "If \"Enabled\" is false then ads will no longer work, are you sure?

Note: You can disable ads if the user purchases by IAP, that's why this attribute can be useful."

[node name="ChildDirectedTreatment" type="CheckBox" parent="."]
offset_top = 35.0
offset_right = 1144.0
offset_bottom = 66.0
text = "Child Directed Treatment"

[node name="MaxAdContentRating" type="HBoxContainer" parent="."]
offset_top = 70.0
offset_right = 1144.0
offset_bottom = 96.0

[node name="Key" type="Label" parent="MaxAdContentRating"]
offset_right = 165.0
offset_bottom = 26.0
text = "MaxAdContentRating"

[node name="Value" type="OptionButton" parent="MaxAdContentRating"]
offset_left = 169.0
offset_right = 183.0
offset_bottom = 26.0

[connection signal="pressed" from="Enabled" to="Enabled" method="_on_Enabled_pressed"]
[connection signal="confirmed" from="Enabled/ConfirmationDialog" to="Enabled" method="_on_ConfirmationDialog_confirmed"]
[connection signal="pressed" from="ChildDirectedTreatment" to="." method="_on_ChildDirectedTreatment_pressed"]
[connection signal="item_selected" from="MaxAdContentRating/Value" to="." method="_on_MaxAdContentRating_item_selected"]
